src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>B2B</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurturing</fullName>
        </values>
        <values>
            <fullName>Opened</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Degrees</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurturing</fullName>
        </values>
        <values>
            <fullName>Opened</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>IP Leads</fullName>
        <description>Lead process created for Industry Partners</description>
        <isActive>true</isActive>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurturing</fullName>
        </values>
        <values>
            <fullName>Opened</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Learner</fullName>
        <description>Premium learners individual payers</description>
        <isActive>true</isActive>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurturing</fullName>
        </values>
        <values>
            <fullName>Opened</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>University Partner Leads</fullName>
        <description>Lead Process for University Partners</description>
        <isActive>true</isActive>
        <values>
            <fullName>New</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Nurturing</fullName>
        </values>
        <values>
            <fullName>Opened</fullName>
        </values>
        <values>
            <fullName>Qualified</fullName>
        </values>
        <values>
            <fullName>Unqualified</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AC_notes__c</fullName>
        <description>long text notes for degree/cert recruitment</description>
        <inlineHelpText>write stuff here</inlineHelpText>
        <label>AC notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Accepted_joined_Group__c</fullName>
        <label>Accepted/Joined Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application_Last_Accessed_Date__c</fullName>
        <label>Application Last Accessed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <label>Application Status</label>
        <picklist>
            <picklistValues>
                <fullName>Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrolled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>B2B_Department__c</fullName>
        <label>zB2B Department (Deprecated)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bachelor_s_Degree__c</fullName>
        <description>Degree stated in Degree Lead</description>
        <label>Bachelor&apos;s Degree</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPA_Exam__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CPA Exam</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Came_from_Website__c</fullName>
        <description>Checked if came from website; unchecked otherwise</description>
        <formula>if(  ISPICKVAL(LeadSource, &quot;Inbound: Website&quot;),TRUE,FALSE)</formula>
        <inlineHelpText>Checked if came from website; unchecked otherwise</inlineHelpText>
        <label>Came from Website</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Certificate__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certificate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Course Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Country_of_Residence__c</fullName>
        <description>Country from Degree Lead</description>
        <inlineHelpText>Country from Degree Lead</inlineHelpText>
        <label>Current Country of Residence</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Decision_Date__c</fullName>
        <label>Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Degree</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Department within company of lead</description>
        <inlineHelpText>Department within company of lead</inlineHelpText>
        <label>Department</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>Email Address from Degree Lead</description>
        <inlineHelpText>Email Address from Degree Lead</inlineHelpText>
        <label>Email Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Range__c</fullName>
        <description>Choose or type:
1-10
11-50
51-150
151-500
501-1000
1001-5000
&gt;5000</description>
        <inlineHelpText>Choose or type:
1-10
11-50
51-150
151-500
501-1000
1001-5000
&gt;5000</inlineHelpText>
        <label>Employee Range</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <description>First Name from Degree Lead</description>
        <inlineHelpText>First Name from Degree Lead</inlineHelpText>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GRE__c</fullName>
        <description>GRE from Degree Lead</description>
        <label>GRE</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Goals__c</fullName>
        <description>Goals stated in degree lead</description>
        <label>Goals</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Government__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the lead is government-based</description>
        <inlineHelpText>Checked if the lead is government-based</inlineHelpText>
        <label>Government</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Highest_level_of_education_completed__c</fullName>
        <description>Level of Education from Degree Lead</description>
        <label>Highest level of education completed</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Imported_to_Group__c</fullName>
        <label>Imported to Group</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invited_Via_Email__c</fullName>
        <label>Invited Via Email</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Approved_by_IP_Manager__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate level 1 approval status of the industry partner lead</description>
        <inlineHelpText>Status of approval from team manager</inlineHelpText>
        <label>Is Approved by IP Manager?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Job_Industry__c</fullName>
        <description>job industry stated in degree lead</description>
        <label>Job Industry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Title__c</fullName>
        <description>job title stated in degree lead</description>
        <label>Job Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <description>Last Name from Degree Lead</description>
        <inlineHelpText>Last Name from Degree Lead</inlineHelpText>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Record_Type_Contact_Hidden__c</fullName>
        <label>Lead Record Type Contact (Hidden)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Record_Type_Hidden__c</fullName>
        <label>Lead Record Type (Hidden)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Record_Type_Oppty_Hidden__c</fullName>
        <defaultValue>IF( $RecordType.Name &lt;&gt; &quot;Industry Partner Lead&quot; , &quot;B2B&quot;,null)</defaultValue>
        <label>Lead Record Type Oppty (Hidden)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Vertical__c</fullName>
        <formula>IF( OR(Government__c=true, contains(Email,&quot;.gov&quot;)),&quot;Government&quot;,
if( Nonprofit__c =true,&quot;Nonprofit&quot;,
&quot;Corporate&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Automatically checked if the lead is a non-profit or govt entity, linked to email (if containing .gov) or if manually checked as a non-profit or govt entity</inlineHelpText>
        <label>Lead Vertical</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Leadership_Experience__c</fullName>
        <description>Experience states in degree lead</description>
        <label>Leadership Experience</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__MC_Subscriber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MC Subscriber</label>
        <referenceTo>MC4SF__MC_Subscriber__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manual_Group__c</fullName>
        <label>Manual Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Masters_Area_of_Study__c</fullName>
        <description>Area of study stated degree lead</description>
        <label>Masters Area of Study</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Native_Language__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>used for iMSA</inlineHelpText>
        <label>Native Language</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nonprofit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if the lead is nonprofit (should verify through Guidestar)</description>
        <inlineHelpText>Checked if the lead is nonprofit (should verify through Guidestar)</inlineHelpText>
        <label>Nonprofit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Notes and/or next steps</description>
        <inlineHelpText>Notes and/or next steps</inlineHelpText>
        <label>(Hidden) Nonprofit Notes</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_ID__c</fullName>
        <label>Partner ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Name__c</fullName>
        <description>Partner Name for Degree Lead</description>
        <inlineHelpText>Partner Name for Degree Lead</inlineHelpText>
        <label>Partner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Shortname__c</fullName>
        <label>Partner Shortname</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Call_One_Date__c</fullName>
        <label>Phone Call One Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone_Call_Three_Date__c</fullName>
        <label>Phone Call Three Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone_Call_Two_Date__c</fullName>
        <label>Phone Call Two Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <description>Phone number from Degree Lead</description>
        <inlineHelpText>Phone number from Degree Lead</inlineHelpText>
        <label>Phone Number</label>
        <length>23</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Posted_in_Forums__c</fullName>
        <label>Posted in Forums</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proactive_Call__c</fullName>
        <label>Proactive Call</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proactive_Email__c</fullName>
        <description>Date for Proactive Email</description>
        <label>Proactive Email</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Program_ID__c</fullName>
        <label>Program ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Name__c</fullName>
        <description>Program Name from Degree Lead</description>
        <inlineHelpText>Program Name from Degree Lead</inlineHelpText>
        <label>Program Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Slug__c</fullName>
        <label>Program Slug</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Self_reported_employees_to_buy_for__c</fullName>
        <description>Choose or type:
1-10
11-50
51-150
151-500
501-1000
1001-5000
&gt;5000</description>
        <inlineHelpText>Choose or type:
1-10
11-50
51-150
151-500
501-1000
1001-5000
&gt;5000</inlineHelpText>
        <label>Self-reported # employees to buy for</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Started_Application__c</fullName>
        <label>Started Application</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State_Authorization__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Coursera works with multiple universities to offer online Professional Certificates and Degree programs.
[ Pre-checked box] Yes, I would like to learn more about these additional online graduate programs.</description>
        <label>State Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_of_Residence__c</fullName>
        <description>state</description>
        <inlineHelpText>abrev. for state</inlineHelpText>
        <label>State of Residence</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submitted_Application__c</fullName>
        <label>Submitted Application</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Summary_IP__c</fullName>
        <description>Summary of the discussion so far with the lead contact</description>
        <inlineHelpText>Summary with IP lead contact: included in approval email</inlineHelpText>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Survey_Response_ID__c</fullName>
        <description>ID for looking up raw response data</description>
        <label>Survey Response ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOEFL_IELTS_Date__c</fullName>
        <description>If you have taken either the TOEFL or IELTS, when did you take it?</description>
        <label>TOEFL/IELTS Date</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TOEFL__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If English is not your native language, have you taken either the TOEFL or IELTS test?</description>
        <label>TOEFLl/IELTS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Terminal_Section_ID__c</fullName>
        <description>Section identifier for the end state reached by the submission</description>
        <label>Terminal Section ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Try_attempt__c</fullName>
        <description>number of touch points we&apos;ve had with a lead via phone</description>
        <label>Try attempt</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Undergrad_GPA__c</fullName>
        <description>GPA stated in degree lead</description>
        <label>Undergrad GPA</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Undergrad_Institution__c</fullName>
        <description>Institution stated in degree lead</description>
        <label>Undergrad Institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Undergraduate_Major_Other__c</fullName>
        <label>Undergraduate Major (Other)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Undergraduate_Major__c</fullName>
        <label>Undergraduate Major</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_the_lead_asked_for_on_the_website__c</fullName>
        <description>Initial description that the lead provided through the website (not editable by internal SFDC team)</description>
        <inlineHelpText>Initial description that the lead provided through the website (not editable by internal SFDC team)</inlineHelpText>
        <label>Self-reported needs from lead:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WorkState__c</fullName>
        <description>Used for iMSA
In which state do you plan to work?</description>
        <label>WorkState</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Experience__c</fullName>
        <description>Work experiences stated in degree lead</description>
        <label>Work Experience</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X2016_Geo_Territory__c</fullName>
        <description>Based on lookup against &apos;Country&apos;, looks up the primary Coursera territory for routing and prioritization purposes</description>
        <formula>IF(LEN( Country ) = 0, &quot;None&quot;,
IF(CONTAINS( &quot; Canada : United States &quot;, Country ), &quot;NAMER&quot;,
IF(CONTAINS( &quot; India &quot;, Country ), &quot;India&quot;,
IF(CONTAINS( &quot; Anguilla : Mexico: Antigua and Barbuda : Argentina : Aruba : Bahamas : Barbados : Belize : Bermuda : Bolivia, Plurinational State of : Bonaire, Sint Eustatius and Saba : Brazil : Cayman Islands : Chile : Colombia : Costa Rica : Cuba : Curaçao : Dominica : Dominican Republic : Ecuador : El Salvador : French Guiana : Falkland Islands (Malvinas) : Grenada : Guadeloupe : Guatemala : Guyana : Haiti : Honduras : Jamaica : Martinique (French Ant.) : Montserrat : New Caledonia : Nicaragua : Panama : Paraguay : Peru : Saint Helena, Ascension and Tristan da Cunha : Saint Kitts and Nevis : Saint Lucia : Saint Martin : Saint Pierre and Miquelon : Saint Vincent and the Grenadines : Sint Maarten : South Georgia and the South Sandwich Islands : Suriname : Trinidad and Tobago : Turks and Caicos Islands : Uruguay : Venezuela : Virgin Islands, British&quot;, Country ), &quot;LATAM&quot;,

IF(CONTAINS (&quot;Albania : Andorra : Austria : Belarus : Belgium : Bosnia and Herzegovina : Bulgaria : Croatia : Cyprus : Czech Republic : Denmark : Estonia : Faroe Islands : Finland : France : Georgia : Germany : Gibraltar : Greece : Guernsey : Hungary : Iceland : Isle of Man : Italy : Jersey : Kosovo : Latvia : Liechtenstein : Lithuania : Luxembourg : Macedonia : Malta : Moldova : Monaco : Montenegro : Netherlands : Norway : Poland : Portugal : Romania : Russia : San Marino : Serbia : Slovakia : Slovenia : Spain : Svalbard and Jan Mayen Island : Sweden : Switzerland : Turkey : Ukraine : Vatican City : Armenia : Afghanistan : Azerbaijan : Bahrain : Egypt : Iran : Iraq : Israel : Jordan : Kuwait : Lebanon : Oman : Pakistan : Palestine : Qatar : Saudi Arabia : Syria : United Arab Emirates : Angola : Benin : Botswana : Burkina Faso : Burundi : Cameroon : Cape Verde : Central African Republic : Chad : Comoros : Congo, the Democratic Republic of the : Cote d’Ivoire : Djibouti : Equatorial Guinea : Eritrea : Ethiopia : French Southern Territories : Gabon : Gambia : Ghana : Guinea : Guinea-Bissau : Heard Island and McDonald Islands : Kenya : Lesotho : Liberia : Libya : Madagascar : Malawi : Mali : Mauritania : Mauritius : Mayotte : Morocco : Mozambique : Namibia : Niger : Nigeria : Reunion Island : Rwanda : Saint Barthélemy : Sao Tome and Principe : Senegal : Seychelles : Sierra Leone : Somalia : South Africa : South Georgia and the South Sandwich Islands : South Sudan : Sudan : Swaziland : Tanzania : Togo : Tunisia : Uganda : Western Sahara : Zambia : Zimbabw: Ireland : United Kingdom : Yemen&quot;, Country ), &quot;EMEA&quot;,
IF(CONTAINS ( &quot; Bangladesh : Bhutan : Brunei : Cambodia : China : Indonesia : Japan : Kazakhstan : North Korea : South Korea : Kyrgyzstan : Laos : Macao : Malaysia : Mongolia : Myanmar : Nepal : Singapore : Sri Lanka : Taiwan : Turkmenistan : Uzbekistan : Vietnam : Australia : British Indian Ocean Territory : Christmas Island : Cocos (Keeling) Islands : Cook Islands : Federated States of Micronesia : Fiji : French Polynesia : Kiribati : Maldives : Marshall Islands : Mongolia : Myanmar : Nauru : Nepal : New Zealand : Niue Island : Norfolk Island : Palau : Papua New Guinea : Philippines : Pitcairn Island : Samoa:Solomon Islands : Timor-Leste : Tokelau Island : Tonga Island : Tuvalu : Vanuatu : Virgin Islands, US : Wallis and Futuna&quot;, Country ), &quot;Non-India APAC&quot;, &quot;Unknown&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Based on lookup against &apos;Country&apos;, looks up the primary Coursera territory for routing and prioritization purposes</inlineHelpText>
        <label>2016 Geo Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3DisableDuplicateCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Duplicate Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3Index__c</fullName>
        <label>Duplicate Check Index</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>dupcheck__dc3Web2Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Web2Lead</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ezwf__Easy_Workflow__c</fullName>
        <defaultValue>&quot;n3w&quot;</defaultValue>
        <description>Populated with completed tasks to enhance workflow.</description>
        <label>Task Completed</label>
        <length>50000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>iMBA_Deadline_Emails_Bucket__c</fullName>
        <description>Manual grouping for mass email purposes. All leads have started but not submitted an application as of 6/20.</description>
        <label>iMBA Deadline Emails Bucket</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iMBA_Priority_Emails_Bucket__c</fullName>
        <label>iMBA Priority Emails Bucket</label>
        <picklist>
            <picklistValues>
                <fullName>P1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P8</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Date__c</fullName>
        <description>Captures acquisition date from Marketo</description>
        <inlineHelpText>Marketo: Acquisition Date</inlineHelpText>
        <label>Acquisition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program_Id__c</fullName>
        <description>Marketo: Acquisition Program Id</description>
        <label>Acquisition Program Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto71_Acquisition_Program__c</fullName>
        <description>Captures Name of the Acquisition Program from Marketo</description>
        <inlineHelpText>Marketo Acquisition Program</inlineHelpText>
        <label>Acquisition Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_City__c</fullName>
        <description>Marketo: Inferred City</description>
        <label>Inferred City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Company__c</fullName>
        <description>Marketo: Inferred Company</description>
        <label>Inferred Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Country__c</fullName>
        <description>Marketo: Inferred Country</description>
        <label>Inferred Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Metropolitan_Area__c</fullName>
        <description>Marketo: Inferred Metropolitan Area</description>
        <label>Inferred Metropolitan Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Phone_Area_Code__c</fullName>
        <description>Market: Inferred Phone Area Code</description>
        <label>Inferred Phone Area Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_Postal_Code__c</fullName>
        <description>Marketo: Inferred Postal Code</description>
        <label>Inferred Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Inferred_State_Region__c</fullName>
        <description>Marketo: Inferred State Region</description>
        <label>Inferred State Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Lead_Score__c</fullName>
        <description>Captures lead score from Marketo</description>
        <inlineHelpText>Marketo Lead Score</inlineHelpText>
        <label>Score</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Referrer__c</fullName>
        <description>Marketo: Original Referrer</description>
        <label>Original Referrer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Search_Engine__c</fullName>
        <description>Marketo: Original Search Engine</description>
        <label>Original Search Engine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Search_Phrase__c</fullName>
        <description>Marketo: Original Search Phrase</description>
        <label>Original Search Phrase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Source_Info__c</fullName>
        <description>Marketo: Original Source Info</description>
        <label>Original Source Info</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto71_Original_Source_Type__c</fullName>
        <description>Marketo: Original Source Type</description>
        <inlineHelpText>Market: Original Source Type</inlineHelpText>
        <label>Original Source Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Industry_Partner_Leads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Lead.Industry_Partner_Lead</value>
        </filters>
        <label>All Industry Partner Leads</label>
        <sharedTo>
            <roleAndSubordinates>Manager_Industry_Partner</roleAndSubordinates>
        </sharedTo>
    </listViews>
</CustomObject>